--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
         <a class="nav-link" href="https://google.com">Home</a>
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="googlw.com">About Us</a>
         <a class="nav-link" href="#">Blog</a>
         <a class="nav-link" href="#">Contact</a>
       </nav>
